# mcd-machine-learning

./: README.md  environment.yml  pyproject.toml  requirements.txt
data/raw/: post_pabellon.xlsx
notebooks/: 01_jss_first_steps_ml.ipynb  02_w2_jss_tutorial3.ipynb  03_w2_jss_tutorial4.ipynb  04_w2_labs1.ipynb  05_w3_jss_roc.ipynb  06_w3_jss_performance_measurement.ipynb  07_w4_jss_classes.ipynb  08_w4_jss_ayudantia.ipynb  09_w4_jss_lab2.ipynb  10_w5_jss_random_forest.ipynb  11_w5_jss_naive_bayes_lda_qda.ipynb  12_w6_tutorial_svm.ipynb  13_w6_ayudantia_svm.ipynb  14_w6_lab_unbalanced.ipynb
references/: w2_Tutorial_3.ipynb  w2_lab01.ipynb  w2_tutorial_4.ipynb  w3_Notebook_tutorial_curva_ROC.ipynb  w3_Notebook_tutorial_medidas_desempeno.ipynb  w4_Ayudantia2_Aprendizaje-estadistico-y-computacional.ipynb  w5_notebook.ipynb  w6_Ayudantia3_Aprendizaje-estadistico-y-computacional.ipynb  w6_main.ipynb
utils/: paths.py
